force-app/main/default/objects/leaseworks__Spec_Fuel_Capacity__c/leaseworks__Spec_Fuel_Capacity__c.object-meta.xml
<CustomObject>
    <description>This object is to store the fuel capacity.</description>
    <label>Spec Fuel Capacity</label>
    <nameField>
        <displayFormat>F{0000}</displayFormat>
        <label>Spec Fuel Capacity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Spec Fuel Capacities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>