force-app/main/default/objects/leaseworks__Spec_Fuel_Capacity__c/fields/Alternative_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Alternative_Capacity__c</fullName>
    <description>Local field that uses the conversion factors selected by customer</description>
    <formula>CASE(leaseworks__Unit_Alt__c,&quot;kg&quot;, leaseworks__Capacity__c * 0.45359 ,
&quot;lbs&quot;, leaseworks__Capacity__c* 2.2046,
&quot;gal&quot;,leaseworks__Capacity__c *0.2642,
&quot;l&quot;,leaseworks__Capacity__c *3.785,0)</formula>
    <inlineHelpText>Calculated by the system (custom, local field)</inlineHelpText>
    <label>Alternative Capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>