force-app/main/default/objects/leaseworks__Spec_Fuel_Capacity__c/fields/Aux_Fuel_Tank_ACT__c.field-meta.xml
<CustomField>
    <fullName>Aux_Fuel_Tank_ACT__c</fullName>
    <description>Part of the fuel data migration exercise Feb 2025</description>
    <inlineHelpText>If Fuel Load Type is ACT, select a value that indicates if the aux tank is installed, not installed, provisions installed, or TBD. For the Standard tank config, please select &quot;N/A&quot;</inlineHelpText>
    <label>Aux Fuel Tank (ACT)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ACT 1</fullName>
            </value>
            <value>
                <fullName>ACT 2</fullName>
            </value>
            <value>
                <fullName>Not installed</fullName>
            </value>
            <value>
                <fullName>Provisions installed</fullName>
            </value>
            <value>
                <fullName>TBD</fullName>
            </value>
            <value>
                <fullName>Installed</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>