force-app/main/default/objects/leaseworks__Spec_Fuel_Capacity__c/fields/leaseworks__Asset__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Asset__c</fullName>
    <label>Asset</label>
    <referenceTo>leaseworks__Aircraft__c</referenceTo>
    <relationshipLabel>Spec Fuel Capacities</relationshipLabel>
    <relationshipName>Spec_Fuel_Capacities</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>