force-app/main/default/objects/leaseworks__Spec_Fuel_Capacity__c/fields/leaseworks__Capacity__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Capacity__c</fullName>
    <label>Capacity</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>