force-app/main/default/objects/leaseworks__Spec_Fuel_Capacity__c/fields/leaseworks__Capacity_Alt__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Capacity_Alt__c</fullName>
    <formula>CASE(leaseworks__Unit_Alt__c,&quot;kg&quot;, leaseworks__Capacity__c * 0.45359 ,
&quot;lbs&quot;, leaseworks__Capacity__c* 2.2046,
&quot;gal&quot;,leaseworks__Capacity__c *0.2641,
&quot;l&quot;,leaseworks__Capacity__c *3.7854,0)</formula>
    <inlineHelpText>Alternative capacity according to Unit Alternative</inlineHelpText>
    <label>Capacity Alternative</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>