force-app/main/default/objects/leaseworks__Spec_Fuel_Capacity__c/fields/leaseworks__Fuel_Load_Type__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Fuel_Load_Type__c</fullName>
    <inlineHelpText>Select one option from the list. Users will create a record for EACH tank separately.</inlineHelpText>
    <label>Fuel Load Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
                <default>true</default>
                <label>Standard</label>
            </value>
            <value>
                <fullName>ACT 1</fullName>
            </value>
            <value>
                <fullName>ACT 2</fullName>
            </value>
            <value>
                <fullName>Auxiliary</fullName>
                <isActive>false</isActive>
                <label>Auxiliary</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>