force-app/main/default/objects/leaseworks__Spec_Fuel_Capacity__c/fields/leaseworks__Unit__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Unit__c</fullName>
    <inlineHelpText>Select the unit of measure for the ALTERNATIVE capacity</inlineHelpText>
    <label>Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>kg</fullName>
            </value>
            <value>
                <fullName>l</fullName>
                <label>Liters</label>
            </value>
            <value>
                <fullName>lbs</fullName>
            </value>
            <value>
                <fullName>gal</fullName>
            </value>
            <value>
                <fullName>To Be Reported</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>